name:                 haddock
version:              2.17.3
synopsis:             A documentation-generation tool for Haskell libraries
description:          Haddock is a documentation-generation tool for Haskell
                      libraries
license:              BSD3
license-file:         LICENSE
author:               Simon Marlow, David Waern
maintainer:           Simon Hengel <sol@typeful.net>, Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
homepage:             http://www.haskell.org/haddock/
bug-reports:          https://github.com/haskell/haddock/issues
copyright:            (c) Simon Marlow, David Waern
category:             Documentation
build-type:           Simple
cabal-version:        >= 1.10
stability:            experimental

extra-source-files:
  CHANGES
  README.md
  doc/Makefile
  doc/README.md
  doc/*.rst
  doc/conf.py
  haddock-api/src/haddock.sh
  html-test/src/*.hs
  html-test/ref/*.html
  hypsrc-test/src/*.hs
  hypsrc-test/ref/src/*.html
  latex-test/src/Simple/*.hs
  latex-test/ref/Simple/*.tex
  latex-test/ref/Simple/*.sty

flag in-ghc-tree
  description: Are we in a GHC tree?
  default: False
  manual: True

executable haddock
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       driver
  ghc-options:          -funbox-strict-fields -Wall -fwarn-tabs -O2 -threaded

  build-depends:
    base >= 4.3 && < 4.10
  if flag(in-ghc-tree)
    hs-source-dirs: haddock-api/src, haddock-library/vendor/attoparsec-0.12.1.1, haddock-library/src
    cpp-options: -DIN_GHC_TREE
    build-depends:
      filepath,
      directory,
      containers,
      deepseq,
      array,
      xhtml >= 3000.2 && < 3000.3,
      Cabal >= 1.10,
      ghc-boot,
      ghc >= 7.11 && < 8.1,
      bytestring,
      transformers

    other-modules:
      ResponseFile,

      Documentation.Haddock.Parser
      Documentation.Haddock.Parser.Monad
      Documentation.Haddock.Types
      Documentation.Haddock.Doc
      Data.Attoparsec
      Data.Attoparsec.ByteString
      Data.Attoparsec.ByteString.Buffer
      Data.Attoparsec.ByteString.Char8
      Data.Attoparsec.ByteString.FastSet
      Data.Attoparsec.ByteString.Internal
      Data.Attoparsec.Combinator
      Data.Attoparsec.Internal
      Data.Attoparsec.Internal.Fhthagn
      Data.Attoparsec.Internal.Types
      Data.Attoparsec.Number
      Documentation.Haddock.Utf8
      Documentation.Haddock.Parser.Util

      Documentation.Haddock
      Haddock
      Haddock.Interface
      Haddock.Interface.Rename
      Haddock.Interface.Create
      Haddock.Interface.AttachInstances
      Haddock.Interface.LexParseRn
      Haddock.Interface.ParseModuleHeader
      Haddock.Interface.Specialize
      Haddock.Parser
      Haddock.Utils
      Haddock.Backends.Xhtml
      Haddock.Backends.Xhtml.Decl
      Haddock.Backends.Xhtml.DocMarkup
      Haddock.Backends.Xhtml.Layout
      Haddock.Backends.Xhtml.Names
      Haddock.Backends.Xhtml.Themes
      Haddock.Backends.Xhtml.Types
      Haddock.Backends.Xhtml.Utils
      Haddock.Backends.LaTeX
      Haddock.Backends.HaddockDB
      Haddock.Backends.Hoogle
      Haddock.Backends.Hyperlinker
      Haddock.Backends.Hyperlinker.Ast
      Haddock.Backends.Hyperlinker.Parser
      Haddock.Backends.Hyperlinker.Renderer
      Haddock.Backends.Hyperlinker.Types
      Haddock.Backends.Hyperlinker.Utils
      Haddock.ModuleTree
      Haddock.Types
      Haddock.Doc
      Haddock.Version
      Haddock.InterfaceFile
      Haddock.Options
      Haddock.GhcUtils
      Haddock.Syb
      Haddock.Convert
  else
    build-depends:  haddock-api == 2.17.*

test-suite driver-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   driver-test, driver
  build-depends:    base, hspec

test-suite html-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   html-test
  build-depends:    base, filepath, haddock-test == 0.0.1

test-suite hypsrc-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   hypsrc-test
  build-depends:    base, filepath, haddock-test == 0.0.1
  ghc-options:      -Wall -fwarn-tabs

test-suite latex-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   latex-test
  build-depends:    base, filepath, haddock-test == 0.0.1

test-suite hoogle-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   hoogle-test
  build-depends:    base, filepath, haddock-test == 0.0.1

source-repository head
  type:     git
  location: https://github.com/haskell/haddock.git
